objects/vlocity_ins__FinancialStatement__c.object
<CustomObject>
    <description>A point-in-time snapshot of a party&apos;s current financial situation including a full description of the party&apos;s income, expenses, assets, liabilities, and other financial considerations (maybe interests or goals). A financial statement spec can be defined and associated to enable capture of flexible Vlocity Attributes. Can be captured for an Account or a Lead. Logical child of either an Account (AccountId__c) or a Lead (LeadId__c).</description>
    <fields>
        <fullName>vlocity_ins__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Statements</relationshipLabel>
        <relationshipName>FinancialStatements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AsOfDate__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttributeSelectedValues__c</fullName>
        <label>Attribute Selected Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LeadId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Financial Statements</relationshipLabel>
        <relationshipName>FinancialStatements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SavedOmniScriptId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Saved OmniScript</label>
        <referenceTo>vlocity_ins__OmniScriptInstance__c</referenceTo>
        <relationshipLabel>Financial Statements</relationshipLabel>
        <relationshipName>FinancialStatements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SpecProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Spec Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Financial Statements</relationshipLabel>
        <relationshipName>FinancialStatements</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Financial Statement</label>
    <nameField>
        <label>Statement Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Statements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>